Added support for request headers.
Improved website tests.

Cleaned up POMs, removing system properties and surefire configurations.