@@ -16,7 +16,6 @@
     <jetty-94-version>9.4.3-SNAPSHOT</jetty-94-version>
     <jackson2-version>2.8.1</jackson2-version>
     <jetty.version>${jetty-93-version}</jetty.version>
-    <argLine>-Xmx1g -Xms1g -XX:+HeapDumpOnOutOfMemoryError</argLine>
   </properties>
 
   <licenses>
@@ -235,10 +234,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.19.1</version>
-          <configuration>
-            <reuseForks>false</reuseForks>
-            <argLine>${argLine} -Dcom.sun.management.jmxremote -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:StartFlightRecording=duration=120s,filename=${project.build.directory}/myrecording.jfr -XX:+PrintGCDetails</argLine>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
